--- a/BulkyBookWeb/Areas/Customer/Views/Cart/Summary.cshtml
+++ b/BulkyBookWeb/Areas/Customer/Views/Cart/Summary.cshtml
@@ -1,4 +1,7 @@
-﻿ <form method="post">
+﻿@model BulkyBook.Models.ViewModels.ShoppingCartVM
+@using Microsoft.Extensions.Options
+@inject IOptions<BulkyBook.Utility.StripeSettings> Stripe
+<form method="post">
     <br />
     <div class="container">
         <div class="card">
@@ -9,7 +12,7 @@
                         Order Summary
                     </div>
                     <div class="col-6 text-end">
-                        <a href="" class="btn btn-outline-info btn-sm">Back to Cart</a>
+                        <a asp-action="Index" class="btn btn-outline-info btn-sm">Back to Cart</a>
                     </div>
                 </div>
             </div>
@@ -19,7 +22,7 @@
                         <div class="col-12 col-lg-6 pb-4">
                             <div class="row">
                                 <h4 class="d-flex justify-content-between align-items-center mb-3">
-                                    <span class="text-info">Pickup Details</span>
+                                    <span class="text-info">Shipping Details</span>
                                 </h4>
                             </div>
                             <div class="row my-1">
@@ -27,7 +30,8 @@
                                     <label>Name</label>
                                 </div>
                                 <div class="col-9">
-                                    <input type="" value="" class="form-control" />
+                                    <input asp-for="OrderHeader.Name" class="form-control" />
+                                    <span asp-validation-for="OrderHeader.Name" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="row my-1">
@@ -35,7 +39,8 @@
                                     <label>Phone</label>
                                 </div>
                                 <div class="col-9">
-                                    <input type="" value="" class="form-control" />
+                                    <input asp-for="OrderHeader.PhoneNumber" class="form-control" />
+                                    <span asp-validation-for="OrderHeader.PhoneNumber" class="text-danger"></span>
                                 </div>
                             </div>
                             <div class="row my-1">
@@ -43,7 +48,9 @@
                                     <label>Street Address</label>
                                 </div>
                                 <div class="col-9">
-                                    <input type="" value="" class="form-control" />
+                                    <input asp-for="OrderHeader.StreetAddress" class="form-control" />
+                                    <span asp-validation-for="OrderHeader.StreetAddress" class="text-danger"></span>
+
                                 </div>
                             </div>
                             <div class="row my-1">
@@ -51,7 +58,9 @@
                                     <label>City</label>
                                 </div>
                                 <div class="col-9">
-                                    <input type="" value="" class="form-control" />
+                                    <input asp-for="OrderHeader.City" class="form-control" />
+                                    <span asp-validation-for="OrderHeader.City" class="text-danger"></span>
+
                                 </div>
                             </div>
 
@@ -60,7 +69,9 @@
                                     <label>State</label>
                                 </div>
                                 <div class="col-9">
-                                    <input type="" value="" class="form-control" />
+                                    <input asp-for="OrderHeader.State" class="form-control" />
+                                    <span asp-validation-for="OrderHeader.State" class="text-danger"></span>
+
                                 </div>
                             </div>
                             <div class="row my-1">
@@ -68,7 +79,9 @@
                                     <label>Postal Code</label>
                                 </div>
                                 <div class="col-9">
-                                    <input type="" value="" class="form-control" />
+                                    <input asp-for="OrderHeader.PostalCode" class="form-control" />
+                                    <span asp-validation-for="OrderHeader.PostalCode" class="text-danger"></span>
+
                                 </div>
                             </div>
                         </div>
@@ -77,16 +90,20 @@
                                 <span class="text-info">Order Summary</span>
                             </h4>
                             <ul class="list-group mb-3">
+                                @foreach(var details in Model.ListCart)
+                                {
                                 <li class="list-group-item d-flex justify-content-between">
                                     <div>
-                                        <h6 class="my-0">Title</h6>
-                                        <small class="text-muted">Quantity: Count</small>
+                                        <h6 class="my-0">@details.Product.Title</h6>
+                                        <small class="text-muted">Quantity: @details.Count</small>
                                     </div>
-                                    <span class="text-muted">$$$</span>
+                                    <span class="text-muted">@((details.Price * details.Count).ToString("c"))</span>
                                 </li>
+                                    
+                                }
                                 <li class="list-group-item d-flex justify-content-between bg-light">
                                     <small class="text-info">Total (USD)</small>
-                                    <strong class="text-info">$$$</strong>
+                                    <strong class="text-info">@Model.OrderHeader.OrderTotal.ToString("c")</strong>
                                 </li>
                             </ul>
                         </div>
@@ -96,7 +113,9 @@
             <div class="card-footer">
                 <div class="row">
                     <div class="col-12 col-md-8 pt-2">
-                        <p style="color:maroon; font-size:14px;">Estimate Arrival Date:</p>
+                        <p style="color:maroon; font-size:14px;">Estimate Arrival Date:
+                            @DateTime.Now.AddDays(7).ToShortDateString() - @DateTime.Now.AddDays(14).ToShortDateString()
+                        </p>
                     </div>
                     <div class="col-12 col-md-4">
                         <button class="btn btn-primary form-control" type="submit" value="Place Order">Place Order</button>
